# Books

./: .gitignore  AUTHORS  CMakeLists.txt  README.md
src/: BooksApp.vala  CMakeLists.txt  Config.vala.cmake  Library.vala  MyBooks.vala
src/Widgets/: BooksListView.vala  Sidebar.vala  StatusBar.vala  Toolbar.vala
